--- a/Immediate Condition/main.html
+++ b/Immediate Condition/main.html
@@ -97,7 +97,7 @@
     </div>
 
     <div id="endgame">
-        <h1>Time's up!</h1>
+        <h1>TIMES UP!</h1>
         You named { game.items | length } {game.category}.
 
         <div id="postExptSurvey">
