troubleshooting app.js changes
why is it not being reflected on github?

--- a/Immediate Condition/main.html
+++ b/Immediate Condition/main.html
@@ -60,7 +60,7 @@
 
 
     <div id="post_distractors">
-        <h1>Time's up!</h1>
+        <h1>Time's Up!</h1>
 
         The next round will involve listing items again for a category.  This may or may not be a category you have already done.
         If it is a category you've already done, it's OK to list items you've
